// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map Editor renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    buildStructureDefinition="a"
    mousePosition="b"
    uniqueStructures={
        Array [
            "a",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <DrawTile
          structureDefinition="a"
          x={undefined}
          y={undefined}
/>,
      ],
      "className": "AddStructure",
      "pointerEvents": "none",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": "buildStructureDefinition",
        "nodeType": "class",
        "props": Object {
          "structureDefinition": "a",
          "x": undefined,
          "y": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "g",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <DrawTile
            structureDefinition="a"
            x={undefined}
            y={undefined}
/>,
        ],
        "className": "AddStructure",
        "pointerEvents": "none",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": "buildStructureDefinition",
          "nodeType": "class",
          "props": Object {
            "structureDefinition": "a",
            "x": undefined,
            "y": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "g",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Map Editor renders the symbol if it does not exist in uniqueStructures 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    buildStructureDefinition={
        Object {
            "image": Object {
              "innerHTML": <circle />,
            },
          }
    }
    mousePosition="b"
    uniqueStructures={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <defs
          className="buildingStructureReference"
>
          <symbol
                    dangerouslySetInnerHTML={
                              Object {
                                        "__html": <circle />,
                                      }
                    }
                    id={undefined}
                    preserveAspectRatio="xMinYMax"
                    viewBox="0 0 undefined undefined"
          />
</defs>,
        <DrawTile
          structureDefinition={
                    Object {
                              "image": Object {
                                "innerHTML": <circle />,
                              },
                            }
          }
          x={undefined}
          y={undefined}
/>,
      ],
      "className": "AddStructure",
      "pointerEvents": "none",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <symbol
            dangerouslySetInnerHTML={
                        Object {
                                    "__html": <circle />,
                                  }
            }
            id={undefined}
            preserveAspectRatio="xMinYMax"
            viewBox="0 0 undefined undefined"
/>,
          "className": "buildingStructureReference",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": <circle />,
            },
            "id": undefined,
            "preserveAspectRatio": "xMinYMax",
            "viewBox": "0 0 undefined undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "symbol",
        },
        "type": "defs",
      },
      Object {
        "instance": null,
        "key": "buildStructureDefinition",
        "nodeType": "class",
        "props": Object {
          "structureDefinition": Object {
            "image": Object {
              "innerHTML": <circle />,
            },
          },
          "x": undefined,
          "y": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "g",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <defs
            className="buildingStructureReference"
>
            <symbol
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": <circle />,
                                              }
                        }
                        id={undefined}
                        preserveAspectRatio="xMinYMax"
                        viewBox="0 0 undefined undefined"
            />
</defs>,
          <DrawTile
            structureDefinition={
                        Object {
                                    "image": Object {
                                      "innerHTML": <circle />,
                                    },
                                  }
            }
            x={undefined}
            y={undefined}
/>,
        ],
        "className": "AddStructure",
        "pointerEvents": "none",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <symbol
              dangerouslySetInnerHTML={
                            Object {
                                          "__html": <circle />,
                                        }
              }
              id={undefined}
              preserveAspectRatio="xMinYMax"
              viewBox="0 0 undefined undefined"
/>,
            "className": "buildingStructureReference",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": <circle />,
              },
              "id": undefined,
              "preserveAspectRatio": "xMinYMax",
              "viewBox": "0 0 undefined undefined",
            },
            "ref": null,
            "rendered": null,
            "type": "symbol",
          },
          "type": "defs",
        },
        Object {
          "instance": null,
          "key": "buildStructureDefinition",
          "nodeType": "class",
          "props": Object {
            "structureDefinition": Object {
              "image": Object {
                "innerHTML": <circle />,
              },
            },
            "x": undefined,
            "y": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "g",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
